--- a/docker-compose_base.yml
+++ b/docker-compose_base.yml
@@ -1,8 +1,10 @@
 services:
   video-gen:
-    build: .
-    image: silencfox/py311-slim:Wav2Lip
-    container_name: video-generator-wav2lip
+    build:
+      context: .
+      dockerfile: Dockerfile.base
+    image: silencfox/py311-slim:base-os
+    container_name: video-generator-base
     ports:
       - "8000:8000"
     volumes:
