--- a/requirements.txt
+++ b/requirements.txt
@@ -5,16 +5,13 @@ python-multipart
 aiofiles
 ffmpeg-python
 Pillow
-#numpy<2.0
-#soundfile
-#librosa
-# Optional heavier packages (install only if needed)
 torch==2.8.0+cpu
 torchvision==0.23.0+cpu
 torchaudio==2.8.0+cpu
 transformers
 diffusers
-
+accelerate
+safetensors
 
 ## Adicionales para imagen base
 
@@ -22,9 +19,25 @@ opencv-python-headless
 numba
 tqdm
 
-
 scipy==1.11.4
 numpy==1.26.4
 soundfile==0.12.1
 librosa==0.10.1
 TTS==0.22.0
+
+
+
+# Procesamiento multimedia
+opencv-python
+
+
+
+# Deep learning / IA
+onnx
+onnxruntime
+face-alignment
+mediapipe
+
+einops
+gfpgan       # restauración de caras (opcional)
+realesrgan   # superresolución (opcional)
